[package]
name = "stever"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
atty = "0.2"
anyhow = "1.0.65"
arc-swap = "1.5"
argh = "0.1.9"
async-trait = "0.1.57"
base64 = "0.13.0"
bytes = "1.2"
broxus-util = { version = "0.1.5", default-features = false, features = ["serde"] }
config = { version = "0.13.2", default-features = false, features = ["json", "toml"] }
console = "0.15"
ctr = "0.9"
dashmap = "5.4.0"
dialoguer = { version = "0.10", features = ["completion"] }
everscale-crypto = { version = "0.1.4", features = ["tl-proto"] }
everscale-network = { version = "0.3", default-features = false, features = ["rldp", "dht"] }
futures-util = "0.3"
generic-array = "0.14"
hex = "0.4"
home = "0.5"
hmac = "0.11.0"
once_cell = "1.15"
parking_lot = "0.12.1"
pbkdf2 = "0.9.0"
pomfrit = "0.1.8"
public-ip = "0.2"
rand = "0.8.5"
reqwest = "0.11"
rustc-hash = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_path_to_error = "0.1"
serde_json = "1"
sha2 = "0.9"
thiserror = "1.0.37"
tl-proto = "0.3.12"
tokio = { version = "1", features = [
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
    "net",
    "io-util",
    "process",
] }
tokio-util = "0.7"
toml = { version = "0.5", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
tiny-bip39 = { git = "https://github.com/broxus/tiny-bip39.git", default-features = false }
tiny-hderive = { git = "https://github.com/broxus/tiny-hderive.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
