[package]
name = "nodekeeper"
description = "All-in-one node management tool."
version = "0.2.1"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
repository = "https://github.com/broxus/nodekeeper"
edition = "2021"
rust-version = "1.67"
license-file = "./LICENSE"

[dependencies]
aes = "0.8"
anyhow = "1.0.65"
arc-swap = "1.5"
argh = "0.1.9"
async-trait = "0.1.57"
base64 = "0.13.0"
broxus-util = { version = "0.2", default-features = false, features = ["serde", "signal"] }
bytes = "1.2"
console = "0.15"
ctr = "0.9"
dashmap = "5.4.0"
dialoguer = { version = "0.10", features = ["completion"] }
everscale-crypto = { version = "0.1.4", features = ["tl-proto"] }
everscale-network = { version = "0.4", default-features = false, features = ["rldp", "dht"] }
futures-util = "0.3"
generic-array = "0.14"
hex = "0.4"
hmac = "0.11.0"
home = "0.5"
indicatif = "0.17"
libc = "0.2"
num = "0.4"
once_cell = "1.15"
parking_lot = "0.12.1"
pbkdf2 = "0.9.0"
pomfrit = "0.1.8"
public-ip = "0.2"
rand = "0.8.5"
reqwest = "0.11"
rustc-hash = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
sha2 = "0.9"
sysinfo = "0.28"
thiserror = "1.0.37"
tl-proto = "0.3.12"
tokio = { version = "1", features = [
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
    "net",
    "io-util",
    "process",
] }
tokio-util = "0.7"
toml = { version = "0.5", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2", features = ["serde"] }

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
tiny-bip39 = { git = "https://github.com/broxus/tiny-bip39.git", default-features = false }
tiny-hderive = { git = "https://github.com/broxus/tiny-hderive.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git" }

nekoton-abi = { git = "https://github.com/broxus/nekoton.git", features = ["derive"] }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }

[features]
default = []
packaged = []

[package.metadata.deb]
features = ["packaged"]
depends = "build-essential, libssl-dev, pkg-config, libzstd-dev, libclang-dev, libgoogle-perftools-dev, git"
section = "utility"
assets = [
    [
        "target/release/nodekeeper",
        "/usr/local/bin/nodekeeper",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/nodekeeper/README",
        "644",
    ],
]
conf-files = ["/etc/nodekeeper/"]
maintainer-scripts = "debian/"
systemd-units = [
    { unit-name = "validator", enable = true, start = false },
    { unit-name = "validator-manager", enable = true, start = false },
]
